# private_flower

./: README.md  client.py  fine_tune_clip.py  main.py  prepare_datasets_for_clip.py  pyproject.toml  run_clip.py  server.py
clients/: client_factory.py  simple_numpy_client.py
data/: cifar10.py  cifar100.py  data_factory.py  dataset_wrapper.py
dataloaders/: cifar10_loader.py  data_loaders_factory.py
foundation/: clip.py
models/: model_factory.py  resnet_cifar.py  sixty_min_blitz_cnn.py
multi_process_federated/: federated_trainer.py  node_launchers.py
strategies/: gep_strategy.py  strategy_factory.py
trainers/: fine_tune_train.py  simple_trainer.py
