[tool.poetry]
name = "private-flower"
version = "0.1.0"
description = "Implementation of differentially private federated learning based on Flower framework"
authors = ["Moshe Beutel <moshebeutel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flwr = {extras = ["simulation"], version = "^1.5.0"}
torch = "^2.0.1"
torchvision = "^0.15.2"
matplotlib = "^3.7.2"
tqdm = "^4.66.1"
wandb = "^0.15.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
