[tool.poetry]
name = "private-flower"
version = "0.1.0"
description = "Implementation of differentially private federated learning based on Flower framework"
authors = ["Moshe Beutel <moshebeutel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flwr = {extras = ["simulation"], version = "^1.5.0"}
#torch = {url="https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp311-cp311-linux_x86_64.whl"}
torch = {version=">=2.0.0, !=2.0.1"}
#torch = {version="^2.0.0+cu118"}
torchvision = {version="^0.15.0+cu118"}
#torchvision = {url='https://download.pytorch.org/whl/cu118/torchvision-0.15.0%2Bcu118-cp311-cp311-linux_x86_64.whl'}
matplotlib = "^3.7.2"
tqdm = "^4.66.1"
wandb = "^0.15.9"
ftfy = "^6.1.1"
regex = "^2023.10.3"
clip = {git = "https://github.com/openai/CLIP.git"}
transformers = "^4.34.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
