[tool.poetry]
name = "private-flower"
version = "0.1.0"
description = "Implementation of differentially private federated learning based on Flower framework"
authors = ["Moshe Beutel <moshebeutel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = {url="https://download.pytorch.org/whl/cpu/torch-2.0.1%2Bcpu-cp310-cp310-linux_x86_64.whl"}
torchvision = {url='https://download.pytorch.org/whl/cpu/torchvision-0.15.2%2Bcpu-cp310-cp310-linux_x86_64.whl'}
flwr = {extras = ["simulation"], version = "^1.5.0"}
tqdm = "^4.66.1"
ftfy = "^6.1.1"
regex = "^2023.10.3"
clip = {git = "https://github.com/openai/CLIP.git"}
transformers = "^4.34.1"
setuptools = "^68.2.2"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
